setup licences + readma

--- a/poky/meta-epuck/README
+++ b/poky/meta-epuck/README
@@ -8,4 +8,4 @@ This layer depends on:
 	
 	the meta-gumstix layer
 
-Layer maintainer: Miquel Kegeleirs mkegelei@ulb.be
+Layer maintainer: Miquel Kegeleirs miquel.kegeleirs@ulb.be
